# xlib-project-foundation

./: .gitignore  FOLDER_GUIDE.md  README.md  START_HERE.md  config.example.toml  pyproject.toml
docs/: 01.01 Chapter 1 - AI Manager - Design - Overview.md  01.02 Chapter 1 - AI Manager - Design - Detailed.md  01.03 Chapter 1 - AI Manager - User Guide - Overview.md  01.04 Chapter 1 - AI Manager - User Guide - Detailed.md  02.01 Chapter 2 - Config Manager - Design - Overview.md  02.03 Chapter 2 - Config Manager - User Guide - Overview.md  03.01 Chapter 3 - Download Manager - Design - Overview.md  03.02 Chapter 3 - Download Manager - Design - Detailed.md  03.04 Chapter 3 - Download Manager - User Guide - Detailed.md  04.01 Chapter 4 - Files Manager - Design - Overview.md  04.02 Chapter 4 - Files Manager - Design - Detailed.md  04.03 Chapter 4 - Files Manager - User Guide - Overview.md  05.02 Chapter 5 - Media Manager - Design - Detailed.md  05.03 Chapter 5 - Media Manager - User Guide - Overview.md  06.02 Chapter 6 - Communication Manager - Design - Detailed.md  06.03 Chapter 6 - Communication Manager - User Guide - Overview.md  06.04 Chapter 6 - Communication Manager - User Guide - Detailed.md  07.01 Chapter 7 - Encryption Manager - Design - Overview.md  07.02 Chapter 7 - Encryption Manager - Design - Detailed.md  07.03 Chapter 7 - Encryption Manager - User Guide - Overview.md  07.04 Chapter 7 - Encryption Manager - User Guide - Detailed.md  08.03 Chapter 8 - Imports Manager - User Guide - Overview.md  09.04 Chapter 9 - Pipeline Manager - User Guide - Detailed.md  (+3 more)
(+39 files in other folders)
