[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your-project-name"
version = "0.1.0"
description = "Your project description"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"

# Core dependencies - customize based on which xlib-pillars you need
dependencies = [
    "xlib-pillars[ai,config]>=1.0.0",  # Customize: [ai], [config], [download], [all], etc.
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.991",
]

# Add more pillar combinations as needed
all-pillars = [
    "xlib-pillars[all]>=1.0.0"
]

media = [
    "xlib-pillars[media,download]>=1.0.0"
]

[tool.setuptools]
packages = ["your_project_name"]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing -v"
pythonpath = ["src"]